tests/class_statics/declared_class_static_constructor.js
declare class A {
  static constructor: any; // error
}
